# KalmanFilter

./: data.csv  example_1_gold_bar_static_system.py  pyproject.toml
example_1/: example_1_static_system_state_update_equation_estimation_data.csv
example_2/: data.csv  example_2_alpha_beta_state_extrapolation_equation.py
example_3/: example_3_alpha_beta_gamma_filter.py
example_4/: example_4_alpha_beta_gamma_filter.py
example_5/: example_5_kalman_one_dimension.py
